--- a/page3/index.html
+++ b/page3/index.html
@@ -89,27 +89,91 @@
 		<div id="tab3" class="tab">
 			<div class="widgets-content">
 				<div class="container">
+					<div class="title">
+						<h2>TIỆN ÍCH CỘNG ĐỒNG</h2>
+						<div class="line"></div>
+					</div>
+					<div class="list-box">
+						<div class="box">
+							<div class="img img1"></div>
+							<div class="text">
+								<p>Mô tả điểm nổi bật, lời giới thiệu hấp dẫn về sản phẩm/dịch vụ. Hoặc mô tả điểm đặc biệt của từng thành phần cấu thành sản phẩm</p>
+							</div>
+						</div>
+						<div class="width"></div>
+						<div class="box">
+							<div class="img img2"></div>
+							<div class="text">
+								<p>Mô tả điểm nổi bật, lời giới thiệu hấp dẫn về sản phẩm/dịch vụ. Hoặc mô tả điểm đặc biệt của từng thành phần cấu thành sản phẩm</p>
+							</div>
+						</div>
+						<div class="width"></div>
+						<div class="box">
+							<div class="img img3"></div>
+							<div class="text">
+								<p>Mô tả điểm nổi bật, lời giới thiệu hấp dẫn về sản phẩm/dịch vụ. Hoặc mô tả điểm đặc biệt của từng thành phần cấu thành sản phẩm</p>
+							</div>
+						</div>
+						<div class="box">
+							<div class="img img4"></div>
+							<div class="text">
+								<p>Mô tả điểm nổi bật, lời giới thiệu hấp dẫn về sản phẩm/dịch vụ. Hoặc mô tả điểm đặc biệt của từng thành phần cấu thành sản phẩm</p>
+							</div>
+						</div>
+						<div class="width"></div>
+						<div class="box">
+							<div class="img img5"></div>
+							<div class="text">
+								<p>Mô tả điểm nổi bật, lời giới thiệu hấp dẫn về sản phẩm/dịch vụ. Hoặc mô tả điểm đặc biệt của từng thành phần cấu thành sản phẩm</p>
+							</div>
+						</div>
+						<div class="width"></div>
+						<div class="box">
+							<div class="img img6"></div>
+							<div class="text">
+								<p>Mô tả điểm nổi bật, lời giới thiệu hấp dẫn về sản phẩm/dịch vụ. Hoặc mô tả điểm đặc biệt của từng thành phần cấu thành sản phẩm</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 
 		</div>
 		<div id="tab4" class="tab">
 			<div class="container">
+				<div class="widgets-content">
+					<div class="title">
+						<h2>PHỐI CẢNH CĂN HỘ</h2>
+						<div class="line"></div>
+					</div>
+					<div class="list-box">
+						<div class="img img1"></div>
+						<div class="width"></div>
+						<div class="img img2"></div>
+						<div class="width"></div>
+						<div class="img img3"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div id="tab5" class="tab">
-			<div class="container">
+			<div class="widgets-content">
+				<div class="container">
+					<div class="text">
+						<div class="title">
+							<h2>VỊ TRÍ NỔI BẬT</h2>
+							<div class="line"></div>
+							<p>Ergo hoc quidem apparet, nos ad agendum esse natos. Teneo, inquit, finem illi videri nihil dolere. Re mihi non aeque satisfacit, et quidem locis pluribus. Paulum, cum regem Persem captum adduceret, eodem flumine invectio? Nos vero, inquit ille; </p>
+							<p>Ergo hoc quidem apparet, nos ad agendum esse natos. Teneo, inquit, finem illi videri nihil dolere. Re mihi non aeque satisfacit, et quidem locis pluribus. Paulum, cum regem Persem captum adduceret, eodem flumine invectio? Nos vero, inquit ille; </p>
+						</div>
+					</div>
+					<div class="img">
+						<img src="https://static.ladipage.net/m//57b167c9ca57d39c18a1c57c/screenshot_1.png">
+					</div>
+				</div>
 			</div>
-		</div>
-		<div id="tab6" class="tab">
-			<div class="container">
-			</div>
-		</div>
-		<div id="tab7" class="tab">
-			<div class="container">
-			</div>
-		</div>
 
+		</div>
 	</div>
 </body>
 </html>
